[metadata]
name = zigpy-znp
description = A library for zigpy which communicates with TI ZNP radios
version = attr: zigpy_znp.__version__
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zigpy/zigpy-znp
author = Alexei Chetroi
author_email = alexei.chetroi@outlook.com
license = GPL-3.0

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pyserial-asyncio; platform_system!="Windows"
    pyserial-asyncio!=0.5; platform_system=="Windows"  # 0.5 broke writes
    zigpy>=0.47.0
    async_timeout
    voluptuous
    coloredlogs
    jsonschema

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
# XXX: The order of these deps seems to matter
testing =
    pytest>=5.4.5
    pytest-asyncio>=0.12.0
    pytest-timeout
    pytest-mock
    pytest-cov
    coveralls
    asynctest; python_version < "3.8.0"
